k3s/02-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres # Để tên là postgres cho đỡ nhầm
  namespace: my-app-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# ĐÂY LÀ PHẦN MÀY ĐANG THIẾU
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Tên này phải khớp với DB_HOST trong ConfigMap
  namespace: my-app-project
spec:
  selector:
    app: postgres # Trỏ đúng vào label 'app: postgres' của Deployment phía trên
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
